[package]
name = "solagent-cat"
version = "0.1.0"
edition = "2024"
description = "Solana AI agent framework built on comp-cat-rs and rig-cat"
license = "MIT OR Apache-2.0"
keywords = ["solana", "agent", "category-theory", "llm", "ai"]

[dependencies]
comp-cat-rs = "0.5"
rig-cat = "0.1"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2"
solana-client = "2"
spl-token = "6"
spl-associated-token-account = "4"
bs58 = "0.5"
bincode = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
needless_pass_by_value = "warn"
manual_map = "warn"
